Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-1322

Fix Sunstudio unable to find templated method when parameter can be constructed by an intermediate class (proton::scalar --> proton::value)

VotersWatch issueWatchersLinkCloneUpdate Comment AuthorReplace String in CommentUpdate Comment VisibilityDelete Comments
    XMLWordPrintableJSON

Details

    Attachments

      Activity

        This comment will be Viewable by All Users Viewable by All Users
        Cancel

        People

          aconway Alan Conway
          adelboutros@live.com Adel Boutros
          Votes:
          0 Vote for this issue
          Watchers:
          2 Start watching this issue

          Dates

            Created:
            Updated:
            Resolved:

            Slack

              Issue deployment