PROTON-1322: c++ Sunstudio: unable to find templated method

Sunstudio can't find templated method when parameter can be constructed by an
intermediate class (proton::scalar --> proton::value)

Signed-off-by: aboutros <adel.boutros@murex.com>